Fixed spacing around pingbacks not being styled the same as comments

--- a/scss/06-comments/index.scss
+++ b/scss/06-comments/index.scss
@@ -28,7 +28,7 @@
   }
 }
 
-.comment + .comment {
+.comment-list > * + * {
   margin-block-start: 2em;
   border-top: var(--border-width) dashed var(--color-gray-400);
   padding-block-start: 2em;
